[project]
name = "software-internals-blogs"
version = "0.1.0"
description = "Aggregator for blogs from Software Internals discord folk"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feed-aggregator",
]

[tool.uv.sources]
feed-aggregator = { git = "https://github.com/thisismiller/feed-aggregator.git", rev = "7c671627aeb6f8d1629ad5a6d6337290f83ff1bf" }
